--- a/package.json
+++ b/package.json
@@ -21,11 +21,7 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^6.5.1",
-        "@fortawesome/free-solid-svg-icons": "^6.5.1",
-        "@fortawesome/vue-fontawesome": "^3.0.5",
-        "chart.js": "^3.9.1",
-        "sass": "^1.70.0",
+        "swiper": "^11.0.6",
         "vue-chart-3": "^3.1.8"
     }
 }
