--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
+        "mpdf/mpdf": "^8.2",
         "protonemedia/laravel-splade-breeze": "^2.5"
     },
     "require-dev": {
