--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
+        "apexcharts": "^3.46.0",
         "swiper": "^11.0.6",
-        "vue-chart-3": "^3.1.8"
+        "vue-basic-alert": "^1.1.0",
+        "vue-chart-3": "^3.1.8",
+        "vue-sweetalert2": "^5.0.5",
+        "vue3-apexcharts": "^1.5.2"
     }
 }
