--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,26 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.1",
         "blade-ui-kit/blade-heroicons": "^2.3",
+        "elibyy/tcpdf-laravel": "^11.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/socialite": "^5.12",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
         "mpdf/mpdf": "^8.2",
-        "protonemedia/laravel-splade-breeze": "^2.5"
+        "protonemedia/laravel-splade-breeze": "^2.5",
+        "spatie/laravel-permission": "^5.10",
+        "spatie/laravel-query-builder": "^5.8",
+        "stevebauman/location": "^7.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -29,9 +37,16 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "Modules\\": "Modules/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/Countries.php",
+            "app/Helpers/MainHelper.php",
+            "app/Helpers/SettingsHelper.php",
+            "app/Helpers/UserSystemInfoHelper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
