--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^2.0",
         "blade-ui-kit/blade-heroicons": "^2.3",
-        "elibyy/tcpdf-laravel": "^11.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.12",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
-        "mpdf/mpdf": "^8.2",
         "protonemedia/laravel-splade-breeze": "^2.5",
         "spatie/laravel-permission": "^5.10",
         "spatie/laravel-query-builder": "^5.8",
